# multi-modal-image-retrieval-system

multi_modal_image_retrieval_system/: LICENSE  README.rst  pyproject.toml
multi_modal_image_retrieval_system/.github/: ISSUE_TEMPLATE.md
multi_modal_image_retrieval_system/docs/: installation.rst  usage.rst
multi_modal_image_retrieval_system/src/multi_modal_image_retrieval_system/: __init__.py
multi_modal_image_retrieval_system/tests/: __init__.py  test_multi_modal_image_retrieval_system.py
notebooks/: EXPERIMENT.ipynb
